--- a/style.css
+++ b/style.css
@@ -1,4 +1,30 @@
+body{
+  background-color: #F0E68C;
+}
 html {
   height: 100%;
   width: 100%;
+}
+table{
+  border: 2px padding: 10px;  /* remover espaço nas bordas*/ 
+}
+th, td{
+  border: 2px solid black; /* adicionar bordas as células */
+  padding: 5px;
+}
+  table{
+  border: 2px padding: 10px;  /* remover espaço nas bordas*/ 
+  }
+  th, td{
+  border: 2px solid #000000; /* adicionar bordas as células */
+  padding: 5px;
+  }
+h3{
+  color:#000000
+}
+p{
+  color: brown;
+  font-family: ;
+  font-size: ;
+  font-weight: ;
 }
